--- a/Shopee/css/gnb.css
+++ b/Shopee/css/gnb.css
@@ -45,6 +45,7 @@
     margin-right: auto;
     border: none;
    
+    padding-left: 10px;
 }
 .search-box > button {
     background-color: #f53d2d;
